force-app/main/default/objects/ARTL_Task_Integration_Logs__c/ARTL_Task_Integration_Logs__c.object-meta.xml
<CustomObject>
    <label>Task Integration Logs</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Task Integration Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>