force-app/main/default/objects/ARTL_Task_Integration_Logs__c/fields/ARTL_Alt_Key_API__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Alt_Key_API__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alt Key API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>