force-app/main/default/objects/ARTL_Task_Integration_Logs__c/fields/ARTL_Input_Attributes__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Input_Attributes__c</fullName>
    <label>Input Attributes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>