force-app/main/default/objects/ARTL_Task_Integration_Logs__c/fields/ARTL_Interface__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Interface__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interface</label>
    <length>50</length>
    <type>Text</type>
</CustomField>