force-app/main/default/objects/ARTL_Task_Integration_Logs__c/fields/ARTL_OrderId__c.field-meta.xml
<CustomField>
    <fullName>ARTL_OrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OrderId</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>Task_Integrations_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>