force-app/main/default/objects/ARTL_Task_Integration_Logs__c/fields/ARTL_Request__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Request__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>