force-app/main/default/objects/ARTL_Task_Integration_Logs__c/fields/ARTL_Source__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>