force-app/main/default/objects/ARTL_Task_Integration_Logs__c/fields/TaskRecordId__c.field-meta.xml
<CustomField>
    <fullName>TaskRecordId__c</fullName>
    <externalId>true</externalId>
    <label>TaskRecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>